Added some functions and implements Prestamos

--- a/WebContent/WEB-INF/includes/nav.jspf
+++ b/WebContent/WEB-INF/includes/nav.jspf
@@ -118,7 +118,7 @@
                   Prestamos
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Nuevo prestamo</a></li>
+                  <li><a class="dropdown-item" href="${pageContext.request.contextPath}/admin/prestamo.jsp">Nuevo prestamo</a></li>
                   <li><a class="dropdown-item" href="#">Devolucion</a></li>
                   <li><hr class="dropdown-divider" /></li>
                   <li><a class="dropdown-item" href="#">Logout</a></li>
